--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,7 @@
 }
 h1 {
   margin: 0.5rem 0;
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -25,7 +26,19 @@ h1 {
 .App-link {
   color: #61dafb;
 }
+button {
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  background-color: maroon;
+  color: white;
+}
+li {
+  margin: 1rem 1rem;
+}
 
+span:hover {
+  border: 2px solid gold;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
